# server

./: .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nats-dev.conf  nats.conf
.github/workflows/: deploy-dev.yml  deploy.yml
server/: Cargo.toml
server/migrations/: 000_init.sql
server/src/: config.rs  env_utils.rs  error.rs  id.rs  lib.rs  logging.rs  main.rs  validation.rs
server/src/api/: auth.rs  mod.rs  routes.rs  sessions.rs  tests.rs  users.rs
server/src/auth/: apple.rs  google.rs  identity.rs  jwt.rs  middleware.rs  mod.rs  otp.rs
server/src/db/: mod.rs  models.rs  repo.rs
server/src/middleware/: mod.rs  rate_limit.rs
server/src/nats/: jwt.rs  mod.rs
