[package]
name = "handrive-server"
version.workspace = true
edition.workspace = true

[dependencies]
# Web
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }

# Rate limiting
governor = "0.6"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "tls-rustls"] }

# Auth
oauth2 = "4"
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
hmac = "0.12"

# Email (Resend API - works on DigitalOcean without SMTP port restrictions)
resend-rs = "0.21"

# NATS JWT generation
nkeys = "0.4"
data-encoding = "2"
async-nats = "0.38"

# TLS (required for rustls crypto provider)
rustls = { version = "0.23", features = ["ring"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
uuid = { version = "1", features = ["v4", "v5", "serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
regex = "1"
once_cell = "1"
urlencoding = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Config
dotenvy = "0.15"

# HTTP client (for Google OAuth)
reqwest = { version = "0.12", features = ["json"] }

# Required for tests
http-body-util = "0.1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
axum-test = "15"
testcontainers = "0.21"
testcontainers-modules = { version = "0.9", features = ["postgres"] }
